--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
               git config user.name "$USER_NAME"
               git config user.email "$USER_EMAIL"
 
-              git checkout -b master
+              git checkout master
 
               find . -maxdepth 1 ! -name '_site' ! -name '.git' ! -name '.gitignore' -exec rm -rf {} \;
               mv _site/* .
