--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 title: Hello, world! I'm Emma
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+# description: > # this means to ignore newlines until "baseurl:"
 permalink: ":title/"
 baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -11,7 +8,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 # Author Settings
 author: Emma Sun # add your name
 author-img: emma.jpg # add your photo
-about-author: I am an Application Developer at ThoughtWorks, exploring Data Engineering recently. # add description
+about-author: I am an Application Developer, exploring Data Engineering recently. # add description
 social-twitter: 3mmasun# add your Twitter handle
 # social-facebook: # add your Facebook handle
 social-github: 3mmasun # add your Github handle
