--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,11 @@ jobs:
           command: |
             if [ $CIRCLE_BRANCH == 'develop' ]; then
               bash .circleci/deploy-github.sh
+            else
+              echo "Not develop branch, dry run only"
             fi
 workflows:
   version: 2
   build:
     jobs:
       - deploy
-      
